test_scores/negative_dimers/features/Q13191.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q13191.pkl.xz